syntax = "proto3";

package eservice.v2;

import "v2/eservice/eservice.proto";

message EServiceAddedV2 {
  EServiceV2 eservice = 1;
}

message DraftEServiceUpdatedV2 {
  EServiceV2 eservice = 1;
}

message EServiceDeletedV2 {
  string eserviceId = 1;
  EServiceV2 eservice = 2;
}

message EServiceClonedV2 {
  EServiceV2 sourceEservice = 1;
  string sourceDescriptorId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorAddedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDraftDescriptorUpdatedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorQuotasUpdatedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorActivatedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorArchivedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorPublishedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorSuspendedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDraftDescriptorDeletedV2 {
  string descriptorId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptorInterfaceAddedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorDocumentAddedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorInterfaceUpdatedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorDocumentUpdatedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorInterfaceDeletedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceDescriptorDocumentDeletedV2 {
  string descriptorId = 1;
  string documentId = 2;
  EServiceV2 eservice = 3;
}

message EServiceRiskAnalysisAddedV2 {
  string riskAnalysisId = 1;
  EServiceV2 eservice = 2;
}

message EServiceRiskAnalysisUpdatedV2 {
  string riskAnalysisId = 1;
  EServiceV2 eservice = 2;
}

message EServiceRiskAnalysisDeletedV2 {
  string riskAnalysisId = 1;
  EServiceV2 eservice = 2;
}

message EServiceDescriptionUpdatedV2 {
    EServiceV2 eservice = 1;
}

message EServiceDescriptorSubmittedByDelegateV2 {
    string descriptorId = 1;
    EServiceV2 eservice = 2;
}

message EServiceDescriptorApprovedByDelegatorV2 {
    string descriptorId = 1;
    EServiceV2 eservice = 2;
}

message EServiceDescriptorRejectedByDelegatorV2 {
    string descriptorId = 1;
    EServiceV2 eservice = 2;
}

message EServiceDescriptorAttributesUpdatedV2 {
  string descriptorId = 1;
  repeated string attributeIds = 2;
  EServiceV2 eservice = 3;
}

message EServiceNameUpdatedV2 {
    EServiceV2 eservice = 1;
}

message EServiceTemplateAddedV2 {
    EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateRiskAnalysisAddedV2 {
    string riskAnalysisId = 1;
    EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateRiskAnalysisDeletedV2 {
    string riskAnalysisId = 1;
    EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateRiskAnalysisUpdatedV2 {
    string riskAnalysisId = 1;
    EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateDraftVersionUpdatedV2 {
  string versionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateDraftVersionDeletedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateDeletedV2 {
  string eserviceTemplateId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionInterfaceAddedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentAddedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionInterfaceDeletedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentDeletedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionInterfaceUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionPublishedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateNameUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateAudienceDescriptionUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateDescriptionUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateVersionQuotasUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionAddedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionAttributesUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  repeated string attributeIds = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateSuspendedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateActivatedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}
